--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -12,6 +12,10 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 20pt;
         }
+
+        h1 {
+            color: yellow;
+        }
     </style>
 </head>
 <body>
